<?xml version="1.0"?>
<package format="2">
  <name>franka_integ_sim</name>
  <version>0.0.0</version>
  <description>The franka_integ_sim package</description>

  
  <maintainer email="juan.sandoval@ec-nantes.fr">Juan SANDOVAL</maintainer>

  <license>CENTRALE_NANTES</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_gazebo</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <!--<build_depend>gazebo_ros</build_depend> -->
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>franka_gazebo</build_export_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
   <!--<build_export_depend>gazebo_ros</build_export_depend> -->
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <!--<exec_depend>gazebo_ros</exec_depend> -->
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
